@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-30T08:07:51Z",
-  "count" : 4,
+  "timestamp" : "2022-11-30T16:07:08Z",
+  "count" : 3,
   "count_minmax" : [ 1, 5 ],
-  "count_decinc" : [ -1, +5 ],
+  "count_decinc" : [ -2, +5 ],
   "uniques" : 3,
   "uniques_minmax" : [ 1, 3 ],
   "uniques_decinc" : [ -0, +3 ]
