@@ -1,3 +1,11 @@
+2022-11-30T16:07:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3585007463 # 1079
+* notice: last 14d: unq all: 9 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 628 1941 / 647 1977
+* notice: next accum: outdated-unq outdated-all / unq all: 628 1941 / 647 1976
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +3 +5 -0 -2 / 3 3
+* notice: removed / changed dates: [] / [2022-11-16]
+
 2022-11-30T08:07:51Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3581436914 # 1078
 * notice: last 14d: unq all: 9 36
